@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="skin.tetradui" version="1.1.7" name="TetradUI" provider-name="Jezz_X, TeamUI">
+<addon id="skin.tetradui" version="1.1.8" name="TetradUI" provider-name="Jezz_X, TeamUI">
   <requires>
     <import addon="xbmc.gui" version="5.15.00" />
 	<import addon="script.embuary.helper" version="2.0.2"/>
@@ -28,7 +28,7 @@
       <screenshot>resources/screenshot-09.png</screenshot>
       <screenshot>resources/screenshot-10.png</screenshot>
     </assets>
-    <news>[B]1.1.7[/B][CR]- Cleanup backgrounds[CR]- Fix backgrounds from Apps window[CR]- Update startup.xml</news>
+    <news>[B]1.1.8[/B][CR]- Fix sub blade backgrounds</news>
     <description lang="en_GB">TetradUI is a skin add-on for Kodi media center. The aim with TetradUI is to create a fresh modern homage of the classic blades-style UI found in the original Xbox360 dashboard. Also seen in the works of Team Blackbolt and Jezz_X with projects MC360 and JX720 respectively. TetradUI is based on JX720 by Jezz_X.[CR]This add-on was created by Jezz_X and TeamUI.</description>
     <summary lang="en_GB">TetradUI is a skin add-on for Kodi media center</summary>
   </extension>
