@@ -3,6 +3,7 @@
 	<defaultcontrol always="true">9050</defaultcontrol>
 	<previouswindow>home</previouswindow>
 	<onload>SetProperty(RefreshList,1,Home)</onload>
+	<onload condision="!String.IsEmpty(SubBladeType))">Skin.Reset(SubBladeType)</onload>
 	<onload condition="Window.Previous(startup) + !Skin.HasSetting(DialogFirstRun)">AlarmClock(DialogFirstTime,ActivateWindow(1105),00:03,silent)</onload>
 	<animation effect="fade" start="100" end="100" time="30" condition="Control.HasFocus(1)">WindowClose</animation>
 	<animation effect="fade" start="100" end="100" time="30" condition="Control.HasFocus(2)">WindowClose</animation>
