@@ -163,12 +163,11 @@
 	</include>
 	<include name="CommonMediaBackgrounds">
 		<include condition="!Skin.HasSetting(DontBlendBackground)">CommonVideoVizBackground</include>
-		<include condition="Window.Previous(1111)">CommonAppsBackground</include>
-		<include condition="!Window.Previous(1111)">CommonMediaBackground</include>
+		<include condition="Window.Previous(1111) | Skin.String(SubBladeType,apps)">CommonAppsBackground</include>
+		<include condition="!Window.Previous(1111) + !Skin.String(SubBladeType,apps)">CommonMediaBackground</include>
 		<include condition="Skin.HasSetting(DontBlendBackground)">CommonVideoVizBackground</include>
-		<control type="group">
-			<include>CommonMediaBlackwash</include>
-		</control>
+		<include condition="Window.Previous(1111) | Skin.String(SubBladeType,apps)">CommonAppsBlackwash</include>
+		<include condition="!Window.Previous(1111) + !Skin.String(SubBladeType,apps)">CommonMediaBlackwash</include>
 	</include>
 
 <!-- Blackwash Backgrounds -->
@@ -591,281 +590,140 @@
 			<height>800</height>
 			<texture>blades-runner-left.png</texture>
 		</control>
-		<control type="group">
-			<visible>Window.Previous(1111) | Window.Next(1111)</visible>
-			<control type="image">
-				<left>-50</left>
-				<top>-40</top>
-				<width>115</width>
-				<height>800</height>
-				<texture>blades-size3-left-NF.png</texture>
-				<animation type="WindowOpen" condition="Window.Previous(1111)">
-					<effect type="slide" start="50,0" end="60,0" time="100" />
-					<effect type="slide" start="0,0" end="-60,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-				<animation type="WindowClose" condition="Window.Next(1111)">
-					<effect type="slide" start="0,0" end="60,0" time="100" />
-					<effect type="slide" start="0,0" end="-10,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-			</control>
-			<control type="label">
-				<description>weather Label</description>
-				<label>31004</label>
-				<left>40</left>
-				<top>190</top>
-				<include>BladesLabelLeft</include>
-				<animation type="WindowOpen" condition="Window.Previous(1111)">
-					<effect type="slide" start="50,0" end="60,0" time="100" />
-					<effect type="slide" start="0,0" end="-60,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-				<animation type="WindowClose" condition="Window.Next(1111)">
-					<effect type="slide" start="0,0" end="60,0" time="100" />
-					<effect type="slide" start="0,0" end="-10,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-			</control>
-			<control type="image">
-				<left>-120</left>
-				<top>-40</top>
-				<width>180</width>
-				<height>800</height>
-				<texture>blades-runner-left1.png</texture>
-				<animation effect="fade" start="100" end="0" time="100" delay="HomeBladeAnimationSpeed" condition="Window.Next(1111)">WindowClose</animation>
-			</control>
-			<control type="image">
-				<top>-40</top>
-				<width>115</width>
-				<height>800</height>
-				<texture>blades-size4-header.png</texture>
-				<animation type="WindowOpen" condition="Window.Previous(1111)">
-					<effect type="slide" start="50,0" end="60,0" time="100" />
-					<effect type="slide" start="0,0" end="-60,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-				<animation type="WindowClose" condition="Window.Next(1111)">
-					<effect type="slide" start="0,0" end="60,0" time="100" />
-					<effect type="slide" start="0,0" end="-10,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-			</control>
-			<control type="label">
-				<description>Applications Label</description>
-				<label>31002</label>
-				<left>90</left>
-				<top>170</top>
-				<include>BladesLabelLeft</include>
-				<animation type="WindowOpen" condition="Window.Previous(1111)">
-					<effect type="slide" start="50,0" end="60,0" time="100" />
-					<effect type="slide" start="0,0" end="-60,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-				<animation type="WindowClose" condition="Window.Next(1111)">
-					<effect type="slide" start="0,0" end="60,0" time="100" />
-					<effect type="slide" start="0,0" end="-10,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-			</control>
-			<!-- Right side -->
-			<control type="image">
-				<left>55r</left>
-				<top>-40</top>
-				<width>180</width>
-				<height>800</height>
-				<texture>blades-runner-right.png</texture>
-			</control>
-			<control type="image">
-				<left>15r</left>
-				<top>-40</top>
-				<width>115</width>
-				<height>800</height>
-				<texture>blades-size2-right-NF.png</texture>
-				<animation type="WindowOpen" condition="Window.Previous(1111)">
-					<effect type="slide" start="-100,0" end="-110,0" time="100" />
-					<effect type="slide" start="0,0" end="100,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-				<animation type="WindowClose" condition="Window.Next(1111)">
-					<effect type="slide" start="0,0" end="-110,0" time="100" />
-					<effect type="slide" start="0,0" end="10,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-			</control>
-			<control type="label">
-				<description>System Label</description>
-				<label>31003</label>
-				<left>-50r</left>
-				<top>200</top>
-				<include>BladesLabelRight</include>
-				<animation type="WindowOpen" condition="Window.Previous(1111)">
-					<effect type="slide" start="-100,0" end="-110,0" time="100" />
-					<effect type="slide" start="0,0" end="100,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-				<animation type="WindowClose" condition="Window.Next(1111)">
-					<effect type="slide" start="0,0" end="-110,0" time="100" />
-					<effect type="slide" start="0,0" end="10,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-			</control>
-			<control type="image">
-				<left>65r</left>
-				<top>-40</top>
-				<width>115</width>
-				<height>800</height>
-				<texture>blades-size3-right-NF.png</texture>
-				<animation type="WindowOpen" condition="Window.Previous(1111)">
-					<effect type="slide" start="-100,0" end="-110,0" time="100" />
-					<effect type="slide" start="0,0" end="110,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-				<animation type="WindowClose" condition="Window.Next(1111)">
-					<effect type="slide" start="0,0" end="-110,0" time="100" />
-					<effect type="slide" start="0,0" end="10,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-			</control>
-			<control type="label">
-				<description>Media Label</description>
-				<label>31001</label>
-				<left>0r</left>
-				<top>190</top>
-				<include>BladesLabelRight</include>
-				<animation type="WindowOpen" condition="Window.Previous(1111)">
-					<effect type="slide" start="-100,0" end="-110,0" time="100" />
-					<effect type="slide" start="0,0" end="110,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-				<animation type="WindowClose" condition="Window.Next(1111)">
-					<effect type="slide" start="0,0" end="-110,0" time="100" />
-					<effect type="slide" start="0,0" end="10,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-			</control>
+		<control type="image">
+			<left>-100</left>
+			<top>-40</top>
+			<width>115</width>
+			<height>800</height>
+			<texture>blades-size2-left-NF.png</texture>
+			<animation type="WindowOpen" condition="Window.Previous(Home)">
+				<effect type="slide" start="100,0" end="110,0" time="100" />
+				<effect type="slide" start="0,0" end="-110,0" delay="100" time="HomeBladeAnimationSpeed" />
+			</animation>
+			<animation type="WindowClose" condition="Window.Next(Home)">
+				<effect type="slide" start="0,0" end="110,0" time="100" />
+				<effect type="slide" start="0,0" end="-10,0" delay="100" time="HomeBladeAnimationSpeed" />
+			</animation>
 		</control>
-		<control type="group">
-			<visible>Window.Previous(Home) | Window.Next(Home)</visible>
-			<control type="image">
-				<left>-100</left>
-				<top>-40</top>
-				<width>115</width>
-				<height>800</height>
-				<texture>blades-size2-left-NF.png</texture>
-				<animation type="WindowOpen" condition="Window.Previous(Home)">
-					<effect type="slide" start="100,0" end="110,0" time="100" />
-					<effect type="slide" start="0,0" end="-110,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-				<animation type="WindowClose" condition="Window.Next(Home)">
-					<effect type="slide" start="0,0" end="110,0" time="100" />
-					<effect type="slide" start="0,0" end="-10,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-			</control>
-			<control type="label">
-				<description>weather Label</description>
-				<label>31004</label>
-				<left>-10</left>
-				<top>200</top>
-				<include>BladesLabelLeft</include>
-				<animation type="WindowOpen" condition="Window.Previous(Home)">
-					<effect type="slide" start="100,0" end="110,0" time="100" />
-					<effect type="slide" start="0,0" end="-110,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-				<animation type="WindowClose" condition="Window.Next(Home)">
-					<effect type="slide" start="0,0" end="110,0" time="100" />
-					<effect type="slide" start="0,0" end="-10,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-			</control>
-			<control type="image">
-				<left>-50</left>
-				<top>-40</top>
-				<width>115</width>
-				<height>800</height>
-				<texture>blades-size3-left-NF.png</texture>
-				<animation type="WindowOpen" condition="Window.Previous(Home)">
-					<effect type="slide" start="100,0" end="110,0" time="100" />
-					<effect type="slide" start="0,0" end="-110,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-				<animation type="WindowClose" condition="Window.Next(Home)">
-					<effect type="slide" start="0,0" end="110,0" time="100" />
-					<effect type="slide" start="0,0" end="-10,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-			</control>
-			<control type="label">
-				<description>Applications Label</description>
-				<label>31002</label>
-				<left>40</left>
-				<top>190</top>
-				<include>BladesLabelLeft</include>
-				<animation type="WindowOpen" condition="Window.Previous(Home)">
-					<effect type="slide" start="100,0" end="110,0" time="100" />
-					<effect type="slide" start="0,0" end="-110,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-				<animation type="WindowClose" condition="Window.Next(Home)">
-					<effect type="slide" start="0,0" end="110,0" time="100" />
-					<effect type="slide" start="0,0" end="-10,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-			</control>
-			<control type="image">
-				<left>-120</left>
-				<top>-40</top>
-				<width>180</width>
-				<height>800</height>
-				<texture>blades-runner-left1.png</texture>
-				<animation effect="fade" start="100" end="0" time="100" delay="HomeBladeAnimationSpeed" condition="Window.Next(Home)">WindowClose</animation>
-			</control>
-			<control type="image">
-				<top>-40</top>
-				<width>115</width>
-				<height>800</height>
-				<texture>blades-size4-header.png</texture>
-				<animation type="WindowOpen" condition="Window.Previous(Home)">
-					<effect type="slide" start="100,0" end="110,0" time="100" />
-					<effect type="slide" start="0,0" end="-110,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-				<animation type="WindowClose" condition="Window.Next(Home)">
-					<effect type="slide" start="0,0" end="110,0" time="100" />
-					<effect type="slide" start="0,0" end="-10,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-			</control>
-			<control type="label">
-				<description>Media Label</description>
-				<label>31001</label>
-				<left>88</left>
-				<top>170</top>
-				<include>BladesLabelLeft</include>
-				<animation type="WindowOpen" condition="Window.Previous(Home)">
-					<effect type="slide" start="100,0" end="110,0" time="100" />
-					<effect type="slide" start="0,0" end="-110,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-				<animation type="WindowClose" condition="Window.Next(Home)">
-					<effect type="slide" start="0,0" end="110,0" time="100" />
-					<effect type="slide" start="0,0" end="-10,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-			</control>
-			<!-- Right side -->
-			<control type="image">
-				<left>55r</left>
-				<top>-40</top>
-				<width>180</width>
-				<height>800</height>
-				<texture>blades-runner-right.png</texture>
-			</control>
-			<control type="image">
-				<left>65r</left>
-				<top>-40</top>
-				<width>115</width>
-				<height>800</height>
-				<texture>blades-size3-right-NF.png</texture>
-				<animation type="WindowOpen" condition="Window.Previous(Home)">
-					<effect type="slide" start="-50,0" end="-60,0" time="100" />
-					<effect type="slide" start="0,0" end="60,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-				<animation type="WindowClose" condition="Window.Next(Home)">
-					<effect type="slide" start="0,0" end="-60,0" time="100" />
-					<effect type="slide" start="0,0" end="10,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-			</control>
-			<control type="label">
-				<description>System Label</description>
-				<label>31003</label>
-				<left>0r</left>
-				<top>190</top>
-				<include>BladesLabelRight</include>
-				<animation type="WindowOpen" condition="Window.Previous(Home)">
-					<effect type="slide" start="-50,0" end="-60,0" time="100" />
-					<effect type="slide" start="0,0" end="60,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-				<animation type="WindowClose" condition="Window.Next(Home)">
-					<effect type="slide" start="0,0" end="-60,0" time="100" />
-					<effect type="slide" start="0,0" end="10,0" delay="100" time="HomeBladeAnimationSpeed" />
-				</animation>
-			</control>
+		<control type="label">
+			<description>weather Label</description>
+			<label>31004</label>
+			<left>-10</left>
+			<top>200</top>
+			<include>BladesLabelLeft</include>
+			<animation type="WindowOpen" condition="Window.Previous(Home)">
+				<effect type="slide" start="100,0" end="110,0" time="100" />
+				<effect type="slide" start="0,0" end="-110,0" delay="100" time="HomeBladeAnimationSpeed" />
+			</animation>
+			<animation type="WindowClose" condition="Window.Next(Home)">
+				<effect type="slide" start="0,0" end="110,0" time="100" />
+				<effect type="slide" start="0,0" end="-10,0" delay="100" time="HomeBladeAnimationSpeed" />
+			</animation>
+		</control>
+		<control type="image">
+			<left>-50</left>
+			<top>-40</top>
+			<width>115</width>
+			<height>800</height>
+			<texture>blades-size3-left-NF.png</texture>
+			<animation type="WindowOpen" condition="Window.Previous(Home)">
+				<effect type="slide" start="100,0" end="110,0" time="100" />
+				<effect type="slide" start="0,0" end="-110,0" delay="100" time="HomeBladeAnimationSpeed" />
+			</animation>
+			<animation type="WindowClose" condition="Window.Next(Home)">
+				<effect type="slide" start="0,0" end="110,0" time="100" />
+				<effect type="slide" start="0,0" end="-10,0" delay="100" time="HomeBladeAnimationSpeed" />
+			</animation>
+		</control>
+		<control type="label">
+			<description>Applications Label</description>
+			<label>31002</label>
+			<left>40</left>
+			<top>190</top>
+			<include>BladesLabelLeft</include>
+			<animation type="WindowOpen" condition="Window.Previous(Home)">
+				<effect type="slide" start="100,0" end="110,0" time="100" />
+				<effect type="slide" start="0,0" end="-110,0" delay="100" time="HomeBladeAnimationSpeed" />
+			</animation>
+			<animation type="WindowClose" condition="Window.Next(Home)">
+				<effect type="slide" start="0,0" end="110,0" time="100" />
+				<effect type="slide" start="0,0" end="-10,0" delay="100" time="HomeBladeAnimationSpeed" />
+			</animation>
+		</control>
+		<control type="image">
+			<left>-120</left>
+			<top>-40</top>
+			<width>180</width>
+			<height>800</height>
+			<texture>blades-runner-left1.png</texture>
+			<animation effect="fade" start="100" end="0" time="100" delay="HomeBladeAnimationSpeed" condition="Window.Next(Home)">WindowClose</animation>
+		</control>
+		<control type="image">
+			<top>-40</top>
+			<width>115</width>
+			<height>800</height>
+			<texture>blades-size4-header.png</texture>
+			<animation type="WindowOpen" condition="Window.Previous(Home)">
+				<effect type="slide" start="100,0" end="110,0" time="100" />
+				<effect type="slide" start="0,0" end="-110,0" delay="100" time="HomeBladeAnimationSpeed" />
+			</animation>
+			<animation type="WindowClose" condition="Window.Next(Home)">
+				<effect type="slide" start="0,0" end="110,0" time="100" />
+				<effect type="slide" start="0,0" end="-10,0" delay="100" time="HomeBladeAnimationSpeed" />
+			</animation>
+		</control>
+		<control type="label">
+			<description>Media Label</description>
+			<label>31001</label>
+			<left>88</left>
+			<top>170</top>
+			<include>BladesLabelLeft</include>
+			<animation type="WindowOpen" condition="Window.Previous(Home)">
+				<effect type="slide" start="100,0" end="110,0" time="100" />
+				<effect type="slide" start="0,0" end="-110,0" delay="100" time="HomeBladeAnimationSpeed" />
+			</animation>
+			<animation type="WindowClose" condition="Window.Next(Home)">
+				<effect type="slide" start="0,0" end="110,0" time="100" />
+				<effect type="slide" start="0,0" end="-10,0" delay="100" time="HomeBladeAnimationSpeed" />
+			</animation>
+		</control>
+		<!-- Right side -->
+		<control type="image">
+			<left>55r</left>
+			<top>-40</top>
+			<width>180</width>
+			<height>800</height>
+			<texture>blades-runner-right.png</texture>
+		</control>
+		<control type="image">
+			<left>65r</left>
+			<top>-40</top>
+			<width>115</width>
+			<height>800</height>
+			<texture>blades-size3-right-NF.png</texture>
+			<animation type="WindowOpen" condition="Window.Previous(Home)">
+				<effect type="slide" start="-50,0" end="-60,0" time="100" />
+				<effect type="slide" start="0,0" end="60,0" delay="100" time="HomeBladeAnimationSpeed" />
+			</animation>
+			<animation type="WindowClose" condition="Window.Next(Home)">
+				<effect type="slide" start="0,0" end="-60,0" time="100" />
+				<effect type="slide" start="0,0" end="10,0" delay="100" time="HomeBladeAnimationSpeed" />
+			</animation>
+		</control>
+		<control type="label">
+			<description>System Label</description>
+			<label>31003</label>
+			<left>0r</left>
+			<top>190</top>
+			<include>BladesLabelRight</include>
+			<animation type="WindowOpen" condition="Window.Previous(Home)">
+				<effect type="slide" start="-50,0" end="-60,0" time="100" />
+				<effect type="slide" start="0,0" end="60,0" delay="100" time="HomeBladeAnimationSpeed" />
+			</animation>
+			<animation type="WindowClose" condition="Window.Next(Home)">
+				<effect type="slide" start="0,0" end="-60,0" time="100" />
+				<effect type="slide" start="0,0" end="10,0" delay="100" time="HomeBladeAnimationSpeed" />
+			</animation>
 		</control>
 		<control type="image">
 			<left>55r</left>
